# gtc

./: Cargo.toml  Makefile
src/: checkout_default_branch.rs  cleanup_branches.rs  create_branch.rs  default_branch_name.rs  grasp.rs  main.rs  repository.rs  switch.rs  test.rs  update_pulls.rs
src/pulls/: engine.rs
