[package]
name = "gtc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-rs = "0.7"
serde_json = "1.0"
clap = "3.0.0-beta.2"
primes = "0.3.0"
git2 = "0.13.20"
anyhow = "*"
tempfile = "*"
dotenv = "*"
itertools = "*"
nom = "*"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }